package ua.khpi.oop.lab13.model;

public enum RecordStatus {
    COMPLETED,
    SCHEDULED,
    CANCELLED
}